[package]
name = "tensor-comp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm18-0"] }
llvm-sys = { version = "181" }
logos = "0.14.0"
ariadne = { version = "0.4.0", features = [] }
